Refactor, reformat files with Netbeans